2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/framework-ps.scm:
	Patch by David Feuer.
	
	* scm/output-ps.scm: glyph-string now produces smaller, more
	readable, and probably faster PostScript.  Several findfont
	scalefont setfont instances changed to selectfont
	Hacked-up string-appends changed to formats.
	Patch by David Feuer.

	* ps/music-drawing-routines.ps: add print_letter, print_glyphs.
	Patch by David Feuer.
	
2006-03-30  Graham Percival  <gpermus@gmail.com>

	* scm/lily-library.scm: make "no version" warning message more polite.

	* lily/music.cc: add double quotes to failed octave check.

	* Documentation/user/ advanced-notation, changing-defaults,
	instrument-notation, invoking, music-glossary: whole bunch of minor
	fixes from mailist.

2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/bibliography/GNUmakefile ($(outdir)/%.html): use
	$(buildscriptdir) iso. depth.

	* VERSION (PACKAGE_NAME): release 2.9.1

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/pango-font.cc (pango_item_string_stencil): more robustness.

	* VERSION (PATCH_LEVEL): bump version number.

	* flower/include/guile-compatibility.hh (scm_from_uint32): add
	scm_from_uint32 ()

	* lily/pango-font.cc (pango_item_string_stencil): use
	scm_from_uint32 ()

	* mf/GNUmakefile ($(outdir)/emmentaler-%.otf
	$(outdir)/emmentaler-%.svg): remove canary.

	* lily/pango-font.cc (pango_item_string_stencil): only use uXXX
	glyphnames if we have a ttf font.

2006-03-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Font selection):
	Corrected reference to the font-family-override.ly example.

2006-03-30  Joe Neeman  <joeneeman@gmail.com>
	
	* lily/chord-tremolo-engraver.cc (acknowledge_stem): set the
	stem-tremolo object in the stem (or else the stem might not be
	long enough).

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): only print existing glyphs.
